creation-cluster-k3s/traefik-k3s/overlays/prod/traefik-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: kube-system
spec:
  entrypoints:
  - websecure
  routes:
  - match: Host(`td.192.168.122.100.nip.io`)
    kind: Rule
    services:
    - name: traefik-dashboard
      port: 8080
    middlewares:
    - name: traefik-dashboard-authentication
